# CUDA_Notes

./: .gitignore  README.md  cuda_notes.md
00_prev_concept/: README.md
01_build_dev_env/: README.md  hello_world.cu
02_first_kernel/: vector_add.cpp  vector_add.cu
06_impl_matmul/: README.md  matmul_raw.cu
07_optimize_matmul/: READMD.md
08_impl_reduce/: README.md  reduce_naive.cu
09_optimize_reduce/01_interleaved_addressing/: README.md  reduce_interleaved_addressing.cu
09_optimize_reduce/02_bank_conflict/: README.md  reduce_bank_conflict_free.cu
09_optimize_reduce/03_idle_threads_free/: README.md  reduce_idle_threads_free.cu
09_optimize_reduce/04_unroll/: README.md  reduce_unroll_all.cu  reduce_unroll_last_warp.cu
10_what_my_id/: my_id.cu  my_id_dim2.cu
CUDA_Code/chapter10/: reduce.cu  reduce1parallemlism.cu  reduce2static.cu  warp.cu
CUDA_Code/chapter11/: host-kernel.cu  kernel-kernel.cu  kernel-transfer.cu  kernel_transfer.eps  plot_t1.m  plot_t2.m  t1.txt  t2.txt
CUDA_Code/chapter14/: cublas_gemm.cu  curand_host1.cu  curand_host2.cu  cusolver.cu  thrust_scan_pointer.cu  thrust_scan_vector.cu  x1.txt  x2.txt
CUDA_Code/chapter3/: add.cpp  add1.cu  add2wrong.cu  add4device.cu
CUDA_Code/chapter4/: check1api.cu  check2kernel.cu
CUDA_Code/chapter5/: add1cpu.cu  add2gpu.cu  add3memory.cu  arithmetic1cpu.cu  arithmetic2gpu.cu  error.cuh
CUDA_Code/chapter6/: query.cu  static.cu
CUDA_Code/chapter7/: matrix.cu
CUDA_Code/chapter8/: bank.cu  reduce1cpu.cu  reduce2gpu.cu
CUDA_Code/chapter9/: neighbor.txt  neighbor1cpu.cu  neighbor2gpu.cu  plot_bonds.m  plot_points.m  reduce.cu  xy.txt
CUDA_Code/cuda_project_demo/: CMakeLists.txt  main.cpp
CUDA_Code/cuda_project_demo/include/: foo.cuh
CUDA_Code/cuda_project_demo/src/: foo.cu
CUDA_Code/hello_world/: hello.cu  hello2.cu  hello3.cu  hello4.cu  hello5.cu
